--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			  <a class="nav-link" href="Nucleartechnology.html">Home</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="Contents.html">Contents</a>
+			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="references.html">references</a>
