--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		  <a class="navbar-brand" color:white; >Nuclear Technologies</a>
 		  <ul class="navbar-nav">
 			<li class="nav-item">
-			  <a class="nav-link" href="Nucleartechnology.html">Home</a>
+			  <a class="nav-link" href="index.html">Home</a>
 			</li>
 			<li class="nav-item">
 			  <a class="nav-link" href="contents.html">Contents</a>
