--- a/contents.html
+++ b/contents.html
@@ -41,7 +41,7 @@
 				</div>
 				<div class="card-footer">
 					<div class="btn-group-verticle" role="group">
-						<a href="Uranium2.html" type="button" class="btn btn-dark btn-large btn-block ">Uranium </a>
+						<a href="uranium2.html" type="button" class="btn btn-dark btn-large btn-block ">Uranium </a>
 						<a href="#" type="button" class="btn btn-primary btn-dark btn-block">fusion</a>
 					</div>
 				</div>
