--- a/uranium2.html
+++ b/uranium2.html
@@ -37,8 +37,8 @@
 			<div class ="col">
 				<h3>Notable facts </h3>
 				<ul class="list-group">
-					<li class="list-group-item">A uranium gun-type fission bomb was the first one to be used in warfare being dropped on Hiroshima and thus generally giving the element a bit of a bad name. </li>
-					<li class="list-group-item">Uranium was also used to discover radioactivity. Uranium was left on top of photographic plate in 1896 BY Henri Becquerel (Who radiation exposure is name after becquerel).
+					<li class="list-group-item">A Uranium gun-type fission bomb was the first one to be used in warfare being dropped on Hiroshima and thus generally giving the element a bit of a bad name. </li>
+					<li class="list-group-item">Uranium was also used to discover radioactivity. Uranium was left on top of photographic plate in 1896 by Henri Becquerel (who radiation exposure is name after Becquerel).
 					The plate became cloudy and Becquerel deduced that uranium was giving off invisible rays which would later be classified as radiation.</li>
 				</ul>
 			</div>
@@ -93,10 +93,10 @@
 	While both isotopes are fissionable only U-235 is fissile meaning that it can undergo fission via a low kinetic energy neutron. Due to this problem it must be enriched
 	from natural levels depending on its purpose.
 	For reactors it is enriched to somewhere between 3% and 5% while for weapons it will be enriched to a minimum of 80%.  </P>
-	<p>An important Uranium chemical is uranium hexafluoride which is used to enrich the Uranium in the only two commercially viable methods Which
+	<p>An important Uranium chemical is Uranium Hexafluoride which is used to enrich the Uranium in the only two commercially viable methods which
 	are the gaseous diffusion process and centrifuge process. Both methods make use of the difference in mass between the isotopes. In the centrifuge method the gas is
 	fed into a centrifuge which then spins forcing the heaving molecules(U-238) to the edges and the light molecules to the centre where they are then collected. 
-	Diffusion is not used any more due to It being very energy intensive. The highest concentration that the US can produce of U-235 is 97.5%.</p>
+	Diffusion is not used any more due to it being very energy intensive. The highest concentration that the US can produce of U-235 is 97.5%.</p>
 	<p>Just because U-238 is not fissile does not mean it can’t be involved in the generation of electricity. When U-238 absorbs neutrons, it will sometimes decay into plutonium-239
 	which is fissile meaning that in a nuclear reactor with uranium fuel a portion of the energy is in fact coming from Plutonium.
 	This is in fact how Plutonium is made.</p>
