--- a/uranium2.html
+++ b/uranium2.html
@@ -43,6 +43,7 @@
 				</ul>
 			</div>
 			<div class="col">
+				<h4>Production Leaders</h4>
 				<table class="table table-sm">
 					  <thead>
 						<tr>
