--- a/plutonium.html
+++ b/plutonium.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Uranium</title>
+	<title>Plutonium</title>
 	<meta charset="utf-8">
 	<link rel="icon" href="technuke.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,10 +25,9 @@
 		</ul>
 	</nav>
 <div class="container">
-	<h1 class="display-3">Uranium</h1>
+	<h1 class="display-3">Plutonium</h1>
 	
-	<p>Uranium is a widely know along with plutonium as a nuclear fuel used both in weapons and reactors. 
-	It has 92 protons and was discovered in 1789 by Martin Heinrich Klaproth. Current world production or uranium is estimated to be 41,000 tons.</P>
+	<p></P>
 	
 	
 	<div class="container-fluid">
@@ -38,12 +37,10 @@
 				<h3>Notable facts </h3>
 				<ul class="list-group">
 					<li class="list-group-item">A Uranium gun-type fission bomb was the first one to be used in warfare being dropped on Hiroshima and thus generally giving the element a bit of a bad name. </li>
-					<li class="list-group-item">Uranium was also used to discover radioactivity. Uranium was left on top of photographic plate in 1896 by Henri Becquerel (who radiation exposure is name after Becquerel).
-					The plate became cloudy and Becquerel deduced that uranium was giving off invisible rays which would later be classified as radiation.</li>
+					<li class="list-group-item">Plutonium is the most commonly used isotope in RTGs</li>
 				</ul>
 			</div>
 			<div class="col">
-				<h4>Production Leaders</h4>
 				<table class="table table-sm">
 					  <thead>
 						<tr>
