added power card to contents

--- a/contents.html
+++ b/contents.html
@@ -65,10 +65,23 @@
 				<div class="card-footer">
 					<div class="btn-group-verticle" role="group">
 						<a href="basicweapondesign.html" type="button" class="btn btn-dark btn-large btn-block ">Basic Nuclear Weapon Designs </a>
-						<a href="#" type="button" class="btn btn-primary btn-dark btn-block">fusion</a>
+						
 					</div>
 				</div>
 			</div>
+	<div class="card">
+		<div class="card-header">Power</div>
+			<img class="card-img-top" src="website pics\powerplant.png" alt="Atom">
+		<div class="card-body">
+			<p class="card-text"> The second nuclear technology lit up a lightbulb 3 years after the deployment of nuclear weapons and currently making up 4% of the worlds power supply 
+				power generation is a technology that has a lot of potential.
+			</p>
+		</div>
+		<div class="card-footer">
+			<div class="btn-group-verticle" role="group">
+			</div>
+		</div>
+	<div>
 </body>
 
 </div>
