--- a/contents.html
+++ b/contents.html
@@ -26,7 +26,7 @@
 	</nav>
 <!--Card collums for topics-->
 <div class="container">
-
+	<br>
 	<div class="card-columns">
 	<div class="card">
 				<div class="card-header">Get started</div>
@@ -52,7 +52,7 @@
 			
 	<div class="card">
 				<div class="card-header">Weapons</div>
-				<img class="card-img-top" src="website pics\bomb.png" alt="Atom">
+				<img class="card-img-top" src="website pics\bomb.png" alt="Bomb with radiation symbol">
 				<div class="card-body">
 					
 					<p class="card-text">The first real use of nuclear technology was unsuprisingly weapons. First used to end the 2nd World War in 1945 nuclear weapons have played
@@ -71,7 +71,7 @@
 			</div>
 	<div class="card">
 		<div class="card-header">Power</div>
-			<img class="card-img-top" src="website pics\powerplant.png" alt="Atom">
+			<img class="card-img-top" src="website pics\powerplant.png" alt="Image of Cooling Tower">
 		<div class="card-body">
 			<p class="card-text"> The second nuclear technology lit up a lightbulb 3 years after the deployment of nuclear weapons and currently making up 4% of the worlds power supply 
 				power generation is a technology that has a lot of potential.
@@ -79,6 +79,7 @@
 		</div>
 		<div class="card-footer">
 			<div class="btn-group-verticle" role="group">
+			<a href="rtg.html" type="button" class="btn btn-primary btn-dark btn-block">Radioisotope Power Systems</a>
 			</div>
 		</div>
 	<div>
