--- a/uranium2.html
+++ b/uranium2.html
@@ -40,6 +40,7 @@
 					<li class="list-group-item">A Uranium gun-type fission bomb was the first one to be used in warfare being dropped on Hiroshima and thus generally giving the element a bit of a bad name. </li>
 					<li class="list-group-item">Uranium was also used to discover radioactivity. Uranium was left on top of photographic plate in 1896 by Henri Becquerel (who radiation exposure is name after Becquerel).
 					The plate became cloudy and Becquerel deduced that uranium was giving off invisible rays which would later be classified as radiation.</li>
+					<li class="list-group-item">Uranium is the heaviest naturally occurring element.</li>
 				</ul>
 			</div>
 			<div class="col">
