--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<p class="card-text">
 					
 					</p>
-					<button type="button" class="btn btn-dark">Contents</button>
+					<a type="button" class="btn btn-dark" href="contents.html">Contents</a>
 				</div>
 			</div>
 		</div>
