--- a/rtg.html
+++ b/rtg.html
@@ -57,8 +57,40 @@
 	A thermocouple is two different pieces of metal placed together and one of the pieces of metal is heated by the radioactive decay leading to an electric flow.
 	A RTG is usually comprised of multiple thermocouples so as to increase power output.</p>
 	<br>
-	<h2>Benefits</h2>
-
+	<br>
+	<br>
+	<br>
+	<span class="badge badge-success"><h2>Benefits:</h2></span>
+	<table class="table">
+		<thead class="thead-light">
+			<tr>
+				<th>Attribute</th>
+				<th>Benefit</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>No moving parts</td>
+				<td>The lack of moving parts make them incredibly durable and resistant to bumps and jolts. This makes them a good power source for space exploration
+				as during launch they are less likely to be damaged.</td>
+			</tr>
+			<tr>
+				<td>Long lasting</td>
+				<td>RTG’s are long lasting with the ones used in the voyager missions still operating decades later albeit at lower power outputs. This long-life span 
+				is perfect for space missions with long missions and lack of ability to either replace or maintain the power supplies. </td>
+			</tr>
+			<tr>
+				<td>Self-contained</td>
+				<td>RTG’s require nothing but fuel that provides heat and that is it. This makes them perfect for deep space missions where solar panels power output drops off or where there is no sunlight. </td>
+			</tr>
+		</tbody>
+	</table>
+	<span class="badge badge-danger"><h2>Drawbacks:</h2></span>
+	<p>RTGs have one major disadvantage compared to other methods and that is the health risk they pose. RTGs rely on Pu-238 as their main fuel source and other radioactive fuels that decay over time to provide heat.
+	This makes them dangerous to people as they can both contaminate and irradiate biological matter thus causing cancer and other health issues.</p>
+	<p>These health hazards however mainly do not pose much of an issue as RTGs are primarily used in unmanned space probes. Firstly, as probes are unmanned the radioactive fuel does not prove a threat to anyone once 
+	launched as they are unmanned. Secondly space is astronomically large and mostly empty meaning that although the fuel contents may take thousands of years to become space chances are no one will come close enough 
+	for it to do much harm. </p>
 </div>
 </body>
 </html>
