--- a/basicweapondesign.html
+++ b/basicweapondesign.html
@@ -52,7 +52,7 @@
 		<p>The activation method is also simpler for the gun as all you need is really an explosive or a mechanism to accelerate one mass into another which is not very hard as well as a neutron source. Compared to an implosion type where there are many subcritical pieces of fuel and explosives must be used. Theses explosives must be timed to work in synch so that the bomb functions normally.</p>
 		<p>A gun type bombs simplicity also makes it easier to maintain as the firing mechanism is relatively simple compared to an implosion type bomb. This simplicity means that maintain or retrofitting the bomb is much easier as well as disarmament as you simply remove one of the pieces. The lack of pieces also reduces the chance of a fault compared to an implosion type bomb. Implosion type bombs are usually encased in a sphere and are sealed making Maintenance hard to do. The multiple explosive devices and there triggers also increase the chance of a failure as if one fails to detonate the implosion won’t work effectively or not at all.</p>
 		<p>Implosion type bombs are also more robust when it comes to physical processes. This is because if the two subcritical pieces in a gun become misaligned or miss each other the reaction won't start. These types of misalignments come down to physical forces acting upon the bomb</p>
-		<p>The main difference between them is that uranium won't work in an implosion type bomb (for complex reasons) and so these types of bombs instead use plutonium.</p>
+		<p>The main difference between them is that uranium won't work in an implosion type bomb (<a href="plutonium.html#240">due to Pu-240</a>) and so these types of bombs instead use plutonium.</p>
 </div>
 
 </body>
