--- a/plutonium.html
+++ b/plutonium.html
@@ -26,86 +26,31 @@
 	</nav>
 <div class="container">
 	<h1 class="display-3">Plutonium</h1>
-	
-	<p></P>
-	
-	
-	<div class="container-fluid">
- 
-	<div class="row">
-			<div class ="col">
-				<h3>Notable facts </h3>
-				<ul class="list-group">
-					<li class="list-group-item">A Uranium gun-type fission bomb was the first one to be used in warfare being dropped on Hiroshima and thus generally giving the element a bit of a bad name. </li>
-					<li class="list-group-item">Plutonium is the most commonly used isotope in RTGs</li>
-				</ul>
-			</div>
-			<div class="col">
-				<table class="table table-sm">
-					  <thead>
-						<tr>
-						  <th>Position</th>
-						  <th>Country</th>
-						  <th></th>
-						 </tr>
-					  </thead>
-					  <tbody>
-						<tr>
-						  <th scope="row">1</th>
-						  <td>Kazakhstan</td>
-						  <td><img src="https://upload.wikimedia.org/wikipedia/commons/d/d3/Flag_of_Kazakhstan.svg" alt="Flag of Kazakhastan" style="Width:150px;"></td>
-						</tr>
-						<tr>
-						  <th scope="row">2</th>
-						  <td>Canada</td>
-						  <td><img src="https://upload.wikimedia.org/wikipedia/commons/d/d9/Flag_of_Canada_%28Pantone%29.svg" alt="Flag of Canada" style="Width:150px;"></td>
-						</tr>
-						<tr>
-						  <th scope="row">3</th>
-						  <td>Australia</td>
-						  <td><img src="https://upload.wikimedia.org/wikipedia/commons/b/b9/Flag_of_Australia.svg" alt="Flag of Australia" style="Width:150px;"></td>
-						</tr>
-					  </tbody>
-					</table>
-			
-			</div>
-		</div>
-	</div>
-	
+	<p>Plutonium is the second most prominent nuclear fuel and entirely artificial. Despite being perhaps 
+	slightly less well known than Uranium it was used in the trinity test by the Manhattan project and signalled the
+	opening of the atomic age. The element was discovered in 1940 by Glenn Seaborg and his colleagues and gets its name from the dwarf planet Pluto. </p>
 	<br>
-	
-	<h2>Enirchment:</h2>
-	<div class="float-right">
-		<div class="card">
-			<img class="card-img-top" src="website pics/odds.png" alt="Graphic representing proportion of U-235 to U-238" style="width: 150px;">
-			<div class="card-footer">
-			Proportion of <br> U-235(Red) to <br> U-238(Blue)
-			
-			</div>
-		</div>
-	
-	</div>
-	
-	
-	<p>Uranium has two naturally occurring isotopes U-235 and U-238. They are found in the ratio of 1:99 which is a problem. 
-	While both isotopes are fissionable only U-235 is fissile meaning that it can undergo fission via a low kinetic energy neutron. Due to this problem it must be enriched
-	from natural levels depending on its purpose.
-	For reactors it is enriched to somewhere between 3% and 5% while for weapons it will be enriched to a minimum of 80%.  </P>
-	<p>An important Uranium chemical is Uranium Hexafluoride which is used to enrich the Uranium in the only two commercially viable methods which
-	are the gaseous diffusion process and centrifuge process. Both methods make use of the difference in mass between the isotopes. In the centrifuge method the gas is
-	fed into a centrifuge which then spins forcing the heaving molecules(U-238) to the edges and the light molecules to the centre where they are then collected. 
-	Diffusion is not used any more due to it being very energy intensive. The highest concentration that the US can produce of U-235 is 97.5%.</p>
-	<p>Just because U-238 is not fissile does not mean it can’t be involved in the generation of electricity. When U-238 absorbs neutrons, it will sometimes decay into plutonium-239
-	which is fissile meaning that in a nuclear reactor with uranium fuel a portion of the energy is in fact coming from Plutonium.
-	This is in fact how Plutonium is made.</p>
-	
-	<h3>Depleted Uranium:</h3>
-	<p>Due to enrichment a by-product called depleted uranium is created. As the U-238 and U-235 are separated a large amount of uranium is left made up of mainly U-238 but with a
-	much smaller portion of U-235 usually around 0.3%. Due to this it is less radioactive than normal uranium.</p>
-	<p>This by-product has uses though such as being mixed in with enriched weapons grade Uranium to make reactor grade uranium. This is primarily to due to arms reduction treaties and is a 
-	good way to make use of the weapons fuel although this process is not used any more as most excess weapons grade uranium has been used up. Other uses mainly utilise its density which is a very
-	attractive attribute for both the military and 
-	civilian use where it can be used for control surfaces such as aircraft. It’s also used in armour piercing rounds and saw use mainly in the gulf wars.  </p>
+	<h3>Creation</h3>
+	<p>Plutonium is heavier than Uranium with 94 protons compared to 92 meaning that it cannot be found on Earth naturally (as uranium is the heaviest occurring element).
+	It is instead made in nuclear reactors with the first ones being made not to provide power but to instead create Plutonium for use in war. It is created by bombarding U-238 
+	(the more common Uranium isotope) with neutrons causing the following decays to occur.</p>
+	<blockquote class="blockquote">
+		<p class="text-monospace">U-238 + Neutron --> U-239<br>
+		U-239 -(Beta Decay)-> Np-239 + β<sup>-</sup><br>
+		Np-239 -(Beta Decay)-> Pu-239 +β<sup>-</sup><br>
+		</p>
+	</blockquote>
+	<h3>Important Isotopes</h3>
+	<h5>Pu-239:</h5>
+	<p>Pu-239 is the most common isotope and desired for both bombs and reactors. It does however emit a lot of radiation (1.92 watts per kg) meaning that it can heat up if insulated properly at a reasonable rate. 
+	This needs to be considered when using the fuel as heat can weaken the structural integrity of weapons or cause issues.</p>
+	<h5 id ="240">Pu-240</h5>
+	<p>Continuing along the subject of weapons Pu-240 is seen as a contaminant when it comes to Plutonium being used as a fuel for nuclear weapons. 
+	The problem with 240 is that it undergoes spontaneous fission and releases a lot of neutrons. This can cause issues in nuclear weapons causing them to pre-detonate 
+	leading to a loss in explosive power. 240 is the reason that Plutonium requires <a href="basicweapondesign.html">implosion</a> type design to overcome these issues. To be considered weapons grade plutonium must contain below 6.5% of Pu-240</p>
+	<h5>Pu-238</h5>
+	<p>Pu-238 can be made by bombarding Neptunium-237 in breeder reactors when large amount is required. The reason large amounts of 238 may be required is because
+	it is a primary fuel in <a href="rtg.html">RTGs</a> due to the large amount of heat it gives off via radioactive decay.</p>
 </div>	
 	
 </body>
