--- a/contents.html
+++ b/contents.html
@@ -20,7 +20,7 @@
 			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="references.html">references</a>
+			  <a class="nav-link" href="references.html">References</a>
 			</li>
 		</ul>
 	</nav>
@@ -87,6 +87,13 @@
 	
 	<div class="card">
 		<div class="card-header">Non-Traditional Uses</div>
+		<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/6/61/NASA-project-orion-artist.jpg" alt="Artists Impression of project Orion">
+		<div class="card-footer">
+			<div class="btn-group-verticle" role="group">
+			<a href="orion.html" type="button" class="btn btn-primary btn-dark btn-block">Project Orion</a>
+				<a href="peacfulnukes.html" type="button" class="btn btn-primary btn-dark btn-block">Peaceful Uses of Nuclear Weapons<span class="badge badge-success badge-pill">Recommended Article</span></a>
+				
+			</div>
 		
 	</div>
 </div>
