--- a/plutonium.html
+++ b/plutonium.html
@@ -20,7 +20,7 @@
 			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="references.html">references</a>
+			  <a class="nav-link" href="references.html">References</a>
 			</li>
 		</ul>
 	</nav>
@@ -37,7 +37,7 @@
 	<blockquote class="blockquote">
 		<p class="text-monospace">U-238 + Neutron --> U-239<br>
 		U-239 -(Beta Decay)-> Np-239 + β<sup>-</sup><br>
-		Np-239 -(Beta Decay)-> Pu-239 +β<sup>-</sup><br>
+		Np-239 -(Beta Decay)-> Pu-239 + β<sup>-</sup><br>
 		</p>
 	</blockquote>
 	<h3>Important Isotopes</h3>
