--- a/fission.html
+++ b/fission.html
@@ -20,7 +20,7 @@
 			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="references.html">references</a>
+			  <a class="nav-link" href="references.html">References</a>
 			</li>
 		</ul>
 	</nav>
