--- a/contents.html
+++ b/contents.html
@@ -41,7 +41,8 @@
 				</div>
 				<div class="card-footer">
 					<div class="btn-group-verticle" role="group">
-
+					
+						<a href="fission.html" type="button" class="btn btn-primary btn-dark btn-block">Fission</a>
 						<a href="chainreaction.html" type="button" class="btn btn-primary btn-dark btn-block">Chain Reactions</a>
 						<a href="uranium2.html" type="button" class="btn btn-dark btn-large btn-block ">Uranium </a>
 						<a href="plutonium.html" type="button" class="btn btn-primary btn-dark btn-block">Plutonium</a>
@@ -78,6 +79,7 @@
 		</div>
 		<div class="card-footer">
 			<div class="btn-group-verticle" role="group">
+			<a href="absreactor.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Reactors in the Abstract </a>
 			<a href="rtg.html" type="button" class="btn btn-primary btn-dark btn-block">Radioisotope Power Systems</a>
 			</div>
 		</div>
