--- a/contents.html
+++ b/contents.html
@@ -81,6 +81,7 @@
 			<div class="btn-group-verticle" role="group">
 			<a href="absreactor.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Reactors in the Abstract </a>
 			<a href="rtg.html" type="button" class="btn btn-primary btn-dark btn-block">Radioisotope Power Systems</a>
+			<a href="lwr.html" type="button" class="btn btn-primary btn-dark btn-block">Light Water Reactors</a>
 			</div>
 		</div>
 	</div>
@@ -90,13 +91,28 @@
 	<div class="card">
 		<div class="card-header">Non-Traditional Uses</div>
 		<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/6/61/NASA-project-orion-artist.jpg" alt="Artists Impression of project Orion">
+		<div class="card-body">
+			<p class="card-text">Thought nuclear bombs could only be used as weapons? Well actually they can actually be used in a civillian context from creating canals to going to the moon.
+			</p>
+		</div>
 		<div class="card-footer">
 			<div class="btn-group-verticle" role="group">
 			<a href="orion.html" type="button" class="btn btn-primary btn-dark btn-block">Project Orion</a>
-				<a href="peacfulnukes.html" type="button" class="btn btn-primary btn-dark btn-block">Peaceful Uses of Nuclear Weapons<span class="badge badge-success badge-pill">Recommended Article</span></a>
+				<a href="peacfulnukes.html" type="button" class="btn btn-primary btn-dark btn-block">Peaceful Uses of Nuclear Weapons<span class="badge badge-primary badge-pill">Recommended Article</span></a>
 				
 			</div>
 		
+		</div>
+	</div>
+	<div class="card">
+		<div class="card-header">Uses of Radioisotope</div>
+		<img class="card-img-top" src="" alt="Artists Impression of project Orion">
+		<div class="card-body">
+			<p class="card-text"> A radioisotope is simply an isotope that is radioactive. They have many uses from products we use to medical applications
+			</p>
+		</div>
+		<div class="card-footer">
+		</div>
 	</div>
 </div>
 </body>
