Added Heavy Water Reactors

--- a/contents.html
+++ b/contents.html
@@ -82,6 +82,7 @@
 			<a href="absreactor.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Reactors in the Abstract </a>
 			<a href="rtg.html" type="button" class="btn btn-primary btn-dark btn-block">Radioisotope Power Systems</a>
 			<a href="lwr.html" type="button" class="btn btn-primary btn-dark btn-block">Light Water Reactors</a>
+			<a href="hwr.html" type="button" class="btn btn-primary btn-dark btn-block">Heavy Water Reactors</a>
 			</div>
 		</div>
 	</div>
