--- a/fission.html
+++ b/fission.html
@@ -25,5 +25,37 @@
 		</ul>
 	</nav>
 <!--message-->
+<div class="container">
+	<div class="jumbotron">
+		<h1 class="display-3">Nuclear Fission</h1>
+		<p class="lead">Nuclear fission is simply a large nucleus splitting up into smaller ones. Under this definition nuclear fission can occur through many different processes.</p>
+	</div>
+	<div class="float-right">
+		<div class="card">
+			<div class="card-header">The Fission Process</div>
+			<img class="card-img-top" src="website pics/fission.png" alt="Graphic showing nuclear fission" style="width: 400px;">
+			<div class="card-footer">
+				<blockquote class="blockquote">
+					<footer class="blockquote-footer"> MikeRun<small> 	CC BY-SA 4.0 <a href="https://creativecommons.org/licenses/by-sa/4.0">license</a></small>
+					</footer>
+				</blockquote>
+			
+			</div>
+		</div>
+	
+	</div>
+	<h3>The Process:</h3>
+	<p>Nuclear fission can occur spontaneously or be induced (we will mainly be focusing on induced). It can be induced by being excited by using particles such as a neutron or with gamma rays.
+	This causes the nucleus to become unstable and split into two smaller nuclei.
+	During this process large amounts of energy are released as well as gamma rays and neutrons . The released neutrons can go on to induce fission in other nearby atoms causing a chain reaction.</p>
+	<p>Nuclear fission on its own is rather useless as all you get is a very small amount of energy from the nucleus. For it to be any use to society we would have to do lots of fission events.</p>
+	<br>
+	<h3>The Discorvery of Fission:</h3>
+	<p>Nuclear Fission was discovered in 1938 by Otto Hahn who at first could not interpret his results but  with the help of Lise Meitner and Otto Frisch they were able to come up with a theory on how the
+	fission occurred. Also, in 1939   discovered that multiple neutrons were emitted when uranium-235 underwent fission. This was incredibly important as it led to the possibility of a chain reaction which underpins 
+	a lot of what we will talk about in this book. In 1942 a group of scientists including Enrico Fermi achieved a controlled nuclear chain reaction (Chicago Pile 1). Sadly, we have glossed over a lot of the early 
+	research into nuclear fission but that it Is not necessary to understand the process.</p>
+	<p>Research into nuclear fission and the atomic bomb would later be conducted under the Manhattan project with the first use of a fission bomb being conducted in 1945 during the trinity test.</p>
+</div>
 </body>
 </html>
