--- a/uranium2.html
+++ b/uranium2.html
@@ -104,7 +104,7 @@
 	which is fissile meaning that in a nuclear reactor with uranium fuel a portion of the energy is in fact coming from Plutonium.
 	This is in fact how Plutonium is made.</p>
 	
-	<h3>Depleted Uranium:</h3>
+	<h3 id="depletedu">Depleted Uranium:</h3>
 	<p>Due to enrichment a by-product called depleted uranium is created. As the U-238 and U-235 are separated a large amount of uranium is left made up of mainly U-238 but with a
 	much smaller portion of U-235 usually around 0.3%. Due to this it is less radioactive than normal uranium.</p>
 	<p>This by-product has uses though such as being mixed in with enriched weapons grade Uranium to make reactor grade uranium. This is primarily to due to arms reduction treaties and is a 
