--- a/contents.html
+++ b/contents.html
@@ -42,8 +42,10 @@
 				<div class="card-footer">
 					<div class="btn-group-verticle" role="group">
 					
-						<a href="fission.html" type="button" class="btn btn-primary btn-dark btn-block">Fission</a>
-						<a href="chainreaction.html" type="button" class="btn btn-primary btn-dark btn-block">Chain Reactions</a>
+						<a href="fission.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Fission</a>
+						<a href="chainreaction.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Chain Reactions</a>
+						<a href="radiation.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Radiation</a>
+						
 						<a href="uranium2.html" type="button" class="btn btn-dark btn-large btn-block ">Uranium </a>
 						<a href="plutonium.html" type="button" class="btn btn-primary btn-dark btn-block">Plutonium</a>
 					</div>
