--- a/contents.html
+++ b/contents.html
@@ -45,7 +45,7 @@
 						<a href="fission.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Fission</a>
 						<a href="chainreaction.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Chain Reactions</a>
 						<a href="radiation.html" type="button" class="btn btn-primary btn-dark btn-block"><span class="badge badge-success badge-pill">Basics</span> Radiation</a>
-						
+						<a href="fusion.html" type="button" class="btn btn-primary btn-dark btn-block"> Fusion</a>
 						<a href="uranium2.html" type="button" class="btn btn-dark btn-large btn-block ">Uranium </a>
 						<a href="plutonium.html" type="button" class="btn btn-primary btn-dark btn-block">Plutonium</a>
 					</div>
@@ -85,6 +85,7 @@
 			<a href="rtg.html" type="button" class="btn btn-primary btn-dark btn-block">Radioisotope Power Systems</a>
 			<a href="lwr.html" type="button" class="btn btn-primary btn-dark btn-block">Light Water Reactors</a>
 			<a href="hwr.html" type="button" class="btn btn-primary btn-dark btn-block">Heavy Water Reactors</a>
+			<a href="fusionreactors.html" type="button"class="btn btn-primary btn-dark btn-block"> Fusion Reactors</a>
 			</div>
 		</div>
 	</div>
