--- a/contents.html
+++ b/contents.html
@@ -110,12 +110,14 @@
 	</div>
 	<div class="card">
 		<div class="card-header">Uses of Radioisotope</div>
-		<img class="card-img-top" src="" alt="Artists Impression of project Orion">
+		
 		<div class="card-body">
 			<p class="card-text"> A radioisotope is simply an isotope that is radioactive. They have many uses from products we use to medical applications
 			</p>
 		</div>
 		<div class="card-footer">
+			<a href="orion.html" type="button" class="btn btn-primary btn-dark btn-block">Medecine </a>
+			<a href="orion.html" type="button" class="btn btn-primary btn-dark btn-block">Agriculture</a>
 		</div>
 	</div>
 </div>
