--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="references.html">references</a>
+			  <a class="nav-link" href="References.html">References</a>
 			</li>
 		</ul>
 	</nav>
@@ -41,17 +41,17 @@
 					to be able to understand the more specialist topics. From what the atom is to splitting it.
 					
 					</p>
-					<button type="button" class="btn btn-dark">Basics</button>
+					<button type="button" class="btn btn-dark" >Basics</button>
 				</div>
 			</div>
 		</div>
 		<div class="col">
 			<div class="card">
-				<img class="card-img-top" src="" alt="Screenshot of contents page ">
+				<img class="card-img-top" src="website pics\contents.png" alt="Screenshot of contents page ">
 				<div class="card-body">
 					<h4 class="card-title">Contents</h4>
 					<p class="card-text">
-					
+					Check out the contents to see the full extent of topics that are covered.
 					</p>
 					<a type="button" class="btn btn-dark" href="contents.html">Contents</a>
 				</div>
@@ -59,7 +59,7 @@
 		</div>
 		<div class="col">
 			<div class="card">
-				<img class="card-img-top" src="#" alt="Atom">
+				<img class="card-img-top" src="https://upload.wikimedia.org/wikipedia/commons/7/72/Mushroom_Cloud_-_The_Noun_Project.svg" alt="Mushroom_Cloud_-_The_Noun_Project">
 				<div class="card-body">
 					<h4 class="card-title">Recommended Article</h4>
 					<h6 class="card-subtitle text-muted">Non-traditional Use of Nuclear Weapons</h6>
