--- a/radiation.html
+++ b/radiation.html
@@ -61,7 +61,8 @@
 			</div>
 			<div class="card-body">
 				<p>Beta + radiation is very similar to Beta minus but instead involves a positron which is the antimatter equivalent of an electron. This means that if it comes in to contact with 
-				an electron it will annihilate itself and the electron. Annihilation occurs almost instantaneously meaning that it does very little ionisation. </p>
+				an electron it will annihilate itself and the electron. Annihilation occurs almost instantaneously meaning that it does very little ionisation. However during annihalition two electromagnetic 
+				waves are emitted which depending on their frequency can be gamma rays.</p>
 				<p>We can calculate the amount of energy released in an annihilation using E=MC^2:</p>
 				<p>=(2*mass of electrons)*(speed of light)<sup>2</sup>  Joules </p>
 				<p>=(2*9.109*10<sup>-31</sup>)*(3.00*10<sup>8</sup>)<sup>2</sup> =1.64*10<sup>-13</sup> Joules</P>
