--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
 				<img class="card-img-top" src="website pics\atom.png" alt="Atom" >
 				<div class="card-body">
 					<h4 class="card-title">Get Started</h4>
-					<p class="card-text">In our basics or getting started section we have grouped together the information that you will need 
+					<p class="card-text">In our basics or getting started collection we have grouped together the information that you will need 
 					to be able to understand the more specialist topics. From what the atom is to splitting it.
-					
+					<br>
+					Just look out for the <span class="badge badge-success badge-pill">Basics</span> badge.
 					</p>
-					<button type="button" class="btn btn-dark" >Basics</button>
+					
 				</div>
 			</div>
 		</div>
