--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			  <a class="nav-link" href="contents.html">Contents</a>
 			</li>
 			<li class="nav-item">
-			  <a class="nav-link" href="References.html">References</a>
+			  <a class="nav-link" href="references.html">References</a>
 			</li>
 		</ul>
 	</nav>
@@ -29,8 +29,10 @@
 <div class="jumbotron">
 	<h1 class = "display-3">Welcome to my Website</h1>
 	<p class="lead">See below for some links to different topics and what we are currently recommending.</p>
+	<p class="text-monospace">You can fill out a review of the project <a href="feedback.html">here</a></p>
 </div>
 <div class="container">
+	
 	<div class="row">
 		<div class="col">
 			<div class="card">
