--- a/references.html
+++ b/references.html
@@ -69,6 +69,119 @@
 			</tr>
 		</tbody>
 	</table>	
+	
+	<br>
+	<br>
+	<h3>References</h3
+	<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Author: Marion Br <span class=SpellE>nglinghaus</span>,
+E. (n.d.). Nuclear fission. [online] Euronuclear.org. Available at: <a
+href="http://www.euronuclear.org/info/encyclopedia/n/nuclear-fission.htm">http://www.euronuclear.org/info/encyclopedia/n/nuclear-fission.htm</a>
+[Accessed 16 Dec. 2018].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Executive <span class=GramE>Summary :<span
+class=SpellE>Plowshare</span></span> Program. (2016). pp.1-40.<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Jiang, M. (2013). An Overview of Radioisotope
+Thermoelectric Generators. [online] Large.stanford.edu. Available at: <a
+href="http://large.stanford.edu/courses/2013/ph241/jiang1/">http://large.stanford.edu/courses/2013/ph241/jiang1/</a>
+[Accessed 20 Aug. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Mikhailov, V. (1996). The Ministry of the
+Russian Federation for Atomic Energy <span class=GramE>The</span> Ministry of <span
+class=SpellE>Defense</span> of the Russian Federation USSR Nuclear Weapons
+Tests and Peaceful Nuclear Explosions. VNIIEF.<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>NASA Radioisotope Power Systems. (n.d.). NASA
+Radioisotope Power Systems. [online] Available at: <a
+href="https://rps.nasa.gov/">https://rps.nasa.gov/</a> [Accessed 20 Aug. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span class=SpellE><span
+style='font-size:11.0pt;font-family:"Calibri",sans-serif'>Nordyke</span></span><span
+style='font-size:11.0pt;font-family:"Calibri",sans-serif'> (2000). The Soviet
+Program for Peaceful uses of Nuclear Explosions. U.S. Department of Energy.<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Physics Made Fun (2015). What Is critical
+mass. [video] Available at: <a
+href="https://www.youtube.com/watch?v=ZN1BPLpEkbI">https://www.youtube.com/watch?v=ZN1BPLpEkbI</a>
+[Accessed 10 Jun. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Robinson, W. (n.d.). 21.2 Nuclear Equations –
+Chemistry. [online] Opentextbc.ca. Available at: <a
+href="https://opentextbc.ca/chemistry/chapter/21-2-nuclear-equations/">https://opentextbc.ca/chemistry/chapter/21-2-nuclear-equations/</a>
+[Accessed 8 Jan. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Rsc.org. (n.d.). Plutonium - Element
+information, properties and uses | Periodic Table. [online] Available at: <a
+href="http://www.rsc.org/periodic-table/element/94/plutonium">http://www.rsc.org/periodic-table/element/94/plutonium</a>
+[Accessed 14 Aug. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Rsc.org. (n.d.). Uranium - Element
+information, properties and uses | Periodic Table. [online] Available at: <a
+href="http://www.rsc.org/periodic-table/element/92/uranium">http://www.rsc.org/periodic-table/element/92/uranium</a>
+[Accessed 11 Aug. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Sublette, C. (2019). The Nuclear Weapon
+Archive - A Guide to Nuclear Weapons. [online] Nuclearweaponarchive.org.
+Available at: <a href="https://www.nuclearweaponarchive.org/">https://www.nuclearweaponarchive.org/</a>
+[Accessed 23 Apr. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>Web.archive.org. (2004). National Historic
+Landmarks Program (NHL). [online] Available at: <a
+href="https://web.archive.org/web/20150405180502/http:/tps.cr.nps.gov/nhl/detail.cfm?ResourceId=204&amp;ResourceType=Site">https://web.archive.org/web/20150405180502/http://tps.cr.nps.gov/nhl/detail.cfm?ResourceId=204&amp;ResourceType=Site</a>
+[Accessed 22 Jan. 2019].<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>&nbsp;<o:p></o:p></span></p>
+
+<p style='margin:0cm;margin-bottom:.0001pt'><span style='font-size:11.0pt;
+font-family:"Calibri",sans-serif'>World Nuclear Association. (2017). Use of
+Nuclear Technology. [online] Available at: <a
+href="http://www.world-nuclear.org/information-library/non-power-nuclear-applications/overview/the-many-uses-of-nuclear-technology.aspx">http://www.world-nuclear.org/information-library/non-power-nuclear-applications/overview/the-many-uses-of-nuclear-technology.aspx</a>
+[Accessed 23 Nov. 2018].<o:p></o:p></span></p>
 </div>
 </body>
 </html>
