--- a/contents.html
+++ b/contents.html
@@ -116,7 +116,7 @@
 			</p>
 		</div>
 		<div class="card-footer">
-			<a href="orion.html" type="button" class="btn btn-primary btn-dark btn-block">Medecine </a>
+			<a href="medecine.html" type="button" class="btn btn-primary btn-dark btn-block">Medecine </a>
 			<a href="agriculture.html" type="button" class="btn btn-primary btn-dark btn-block">Agriculture</a>
 		</div>
 	</div>
