--- a/medecine.html
+++ b/medecine.html
@@ -34,9 +34,9 @@
 	the patient’s exposure to the radiation.
 	It must give of a radiation that can pass through the body so alpha cannot be used. </P>
 	<br>
-	<h3>Gene Manipulation:</h3>
-	<p>They can also be used to create better and more resistant plants. Ionising radiation from gamma rays can be used to induce mutations in plants and this has the possibility to create useful genes in plants making
-	them more productive or more resilient and therefor improving yields. This technique is very useful as it allows for the creation of genes that might not be found in nature or may have been lost to evolution.</P>
+	<h3>Treatment</h3>
+	<p>The most well know use of radiation as a treatment is radiotherapy. This is where radiation is used to kill cancer cells in the body.</P>
+	<p>Gamma knife radiosurgery Is an advanced form of radiotherapy. It involves focussing several gamma sources at a point (usually in the brain) where the cancer is. Each individual beam is weak and won’t cause much damage along its path, however where the beams are focused there will be much more ionisation and cell damage killing the cancer but leaving the area around it unharmed.</p>
 	<br>
 	<h3>Preservation:</h3>
 	<p>25-30% of the world’s food is lost to spoilage.  One way to reduce that is to irradiate food as this can kill bacteria and parasites. Irradiation has some advantages over traditional methods such as it
