--- a/medecine.html
+++ b/medecine.html
@@ -25,7 +25,7 @@
 		</ul>
 	</nav>
 <div class="container">
-	<h1 class="display-3">Medecine</h1>
+	<h1 class="display-3">Medicine</h1>
 	<p class="lead">Radioisotopes and radiation can provide a vital role as treatments and other diagnostics applications in medicine:</P>
 	<br>
 	<h3>Diagnostics</h3>
@@ -38,10 +38,7 @@
 	<p>The most well know use of radiation as a treatment is radiotherapy. This is where radiation is used to kill cancer cells in the body.</P>
 	<p>Gamma knife radiosurgery Is an advanced form of radiotherapy. It involves focussing several gamma sources at a point (usually in the brain) where the cancer is. Each individual beam is weak and won’t cause much damage along its path, however where the beams are focused there will be much more ionisation and cell damage killing the cancer but leaving the area around it unharmed.</p>
 	<br>
-	<h3>Preservation:</h3>
-	<p>25-30% of the world’s food is lost to spoilage.  One way to reduce that is to irradiate food as this can kill bacteria and parasites. Irradiation has some advantages over traditional methods such as it
-	uses less energy than refrigeration and reduces the need for preservatives and chemicals which are both harmful to workers and customers. One of the great uses of radiations Is with sealed foods as gamma rays
-	can penetrate packaging killing bacteria but being sealed means it won’t be contaminated.</P>
+
 </div>
 </body>
 </html>
